fix: Corregir errores de producción en Render
PROBLEMAS RESUELTOS:
✅ Agregado "type": "module" al package.json para eliminar warning MODULE_TYPELESS_PACKAGE_JSON
✅ Agregado método getRelationshipsByNpc() en npcRelations.js (alias para compatibilidad con npcAI.js)
✅ Creada tabla events en survival_schema.sql para sistema de simulación
✅ Corregido createEmergentEvent() en simulation.js para usar nuevo schema de events con try-catch

ERRORES CORREGIDOS:
- TypeError: npcRelationships.getRelationshipsByNpc is not a function
- SqliteError: no such table: events
- Warning: Module type not specified (simulation.js)

El servidor ahora debería funcionar correctamente en producción sin estos errores críticos.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "survival-zombie",
   "version": "2.0.0",
   "description": "Survival Zombie - Multiplayer RPG con mundo vivo, NPCs, crafting y quests cooperativas",
+  "type": "module",
   "main": "server/survival_mvp.js",
   "scripts": {
     "start": "node server/survival_mvp.js",
